Add section for Management of the WIS1 Catalogue

--- a/transition-guide/index.adoc
+++ b/transition-guide/index.adoc
@@ -43,4 +43,6 @@ include::sections/gts_to_wis2_gateway.adoc[]
 
 include::sections/wis2_to_gts_gateway.adoc[]
 
+include::sections/wis1cat.adoc[]
+
 include::sections/references.adoc[]
