--- a/transition-guide/sections/introduction.adoc
+++ b/transition-guide/sections/introduction.adoc
@@ -1,5 +1,5 @@
 == Introduction
-
+This is a test edit.
 The WMO Information System 2.0 (WIS2) will be implemented according to the schedule provided in Figure 1. A one-year pilot phase will start at the end of 2022, with several countries collaborating in building the WIS2 infrastructure. Each Country will have a different role in the WIS2 framework and will implement a specific component.
 
 .WIS2 implementation timeline
