--- a/transition-guide/sections/wis2_implementation_plan.adoc
+++ b/transition-guide/sections/wis2_implementation_plan.adoc
@@ -1,8 +1,6 @@
 == Introduction
 
-The WMO Information System 2.0 (WIS2) will be implemented according to the schedule provided in Figure 1. A one-year pilot phase will start at the end of 2022, with several countries collaborating in building the WIS2 infrastructure. Each Country will have a different role in the WIS2 framework and will implement a specific component.
+The Executive Council, with Resolution 34 (EC-76), endorsed the WMO Information System 2.0 (WIS2) implementation plan and recognized the importance of establishing a pilot phase to develop the WIS2 infrastructure and begin testing it to be ready for a pre-operational phase in 2024, and then for the transition starting on 2025. This plan will be implemented according to the schedule provided in Figure 1. The pilot phase has been completed at the end of 2023, with several countries collaborating in building the WIS2 infrastructure. Each country had a different role in the WIS2 framework and implemented a specific component. Starting in January 2024, the implementation of WIS2 will enter the pre-operational phase, and the WIS2 services shall be ready to transition to an operational configuration, which is critical to ensure that WIS2 can serve the WMO community operationally from the beginning of 2025.  It is planned to migrate to WIS2 between 2025 and 2030, with an expected progress rate of up to 90%. The GTS is planned to be decommissioned by 2033.
 
 .WIS2 implementation timeline
 image::images/wis2-timeline.png[WIS2 implementation timeline]
-
-According to the WIS2 implementation plan (see figure 1), the Global Telecommunication System (GTS) will be decommissioned by 2030, and National Meteorological and Hydrological Services NMHSs will use the WIS2 platform for data exchange. During the transition period, there will be a mix of centres operating WIS2 and WIS/GTS. Some of them will be running both data-sharing frameworks simultaneously, with the difficulties associated with maintaining two operational systems for the same purpose. Therefore, a transition plan will be developed during the pilot phase, taking into account the time necessary for Members to migrate to the new systems and reducing, at the minimum, the time of parallel operation of both systems for a Member.
