--- a/transition-guide/sections/temporary_global_services.adoc
+++ b/transition-guide/sections/temporary_global_services.adoc
@@ -2,7 +2,13 @@
 
 === GTS to WIS2 Gateway
 
+The Executive Council, with resolution 34 (EC-76), endorsed the WMO Information System 2 (WIS2) implementation plan and recognized the importance of establishing a pilot phase to develop the WIS2 infrastructure and begin testing it in order to be ready for a preoperational phase in 2024, and then for the transition starting on 2025. According to the WIS2 implementation plan, the Global Telecommunication System (GTS) will be decommissioned by 2030, and National Meteorological and Hydrological Services NMHSs will use the WIS2 platform for data exchange.
+
+During the transition period, in order to avoid some WIS centres being forced to run both data-sharing frameworks WIS2 and GTS simultaneously, with the challenges associated with maintaining two operational systems for the same purpose, a gateway from GTS to WIS2 is designed, taking into account the time required for Members to migrate to the new systems and minimizing the time a member has to operate both systems in parallel.
+
 ==== Purpose
+
+The purpose of the GTS to WIS2 gateway is to enable members who have migrated to WIS2 and have stopped their GTS systems to continue receiving GTS data from WIS2. This gateway also enables users who are not connected to GTS to access GTS data, during the transition phase, from WIS2. The GTS to WIS2 gateway will forward all the GTS traffic it receives to WIS2, that is each bulletin received on one of its GTS channels will be stored to the HTTP(s) endpoint of the Gateway and a WIS2 Notification Message is generated which points to that bulletin file. The Notification Message is published at the GTS to WIS2 gateway topic.
 
 ==== GTS to WIS2 Gateway provider
 
